--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "serve": "ionic serve --host=0.0.0.0 --port=4200",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
